--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>PORTAFOLIO PERSONAL</title>
 </head>
 <body>
+    <div>NOMBRE COMPLETO: Carlos Daniel Torres Maza</div>
     
 </body>
 </html>
