--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>NOMBRE COMPLETO: Carlos Daniel Torres Maza</div>
+    <div>DESCRIPTCION: soy estudiante de ingenieria de sistema en la universidad de la costa, cursando 4 semestre</div>
     
 </body>
 </html>
