--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div>NOMBRE COMPLETO: Carlos Daniel Torres Maza</div>
     <div>DESCRIPTCION: soy estudiante de ingenieria de sistema en la universidad de la costa, cursando 4 semestre</div>
     <div>HABILIDADES: Comunicación efectiva, Pensamiento crítico, Adaptabilidad, Gestión del tiempo, Trabajo en equipo</div>
+    <div>NOMBRES DE LIBROS:</div>
     
 </body>
 </html>
