--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>DESCRIPTCION: soy estudiante de ingenieria de sistema en la universidad de la costa, cursando 4 semestre</div>
     <div>HABILIDADES: Comunicación efectiva, Pensamiento crítico, Adaptabilidad, Gestión del tiempo, Trabajo en equipo</div>
     <div>NOMBRES DE LIBROS:</div>
+    <div>cien años de soledad</div>
     
 </body>
 </html>
